fix: light & dark mode code snippets
before, they weren't being applied because not detecting dark and light mode from tailwindcss. by adding the .dark class, the fix this.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,16 +14,11 @@
     overflow-x: auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  .astro-code,
-  .astro-code span {
+/* Using dark and light mode from TailwindCSS */
+.dark .astro-code,
+.dark .astro-code span {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
-    /* Optional, if you also want font styles */
-    font-style: var(--shiki-dark-font-style) !important;
-    font-weight: var(--shiki-dark-font-weight) !important;
-    text-decoration: var(--shiki-dark-text-decoration) !important;
-  }
 }
 
 @theme inline {
